--- a/src/app/pages/promotions/promotions.component.html
+++ b/src/app/pages/promotions/promotions.component.html
@@ -11,7 +11,7 @@
           <input type="text" class="form-control" placeholder="ຄົ້ນຫາ..." [(ngModel)]="searchPromotion">
         </div>
       </div>
-      <div class="col col-md-8 col-sm-12" style="top: 10px;">
+      <div class="col col-md-8 col-sm-12 mb-2" style="top: 10px;">
         <div class="text-right">
           <button mat-raised-button color="primary" class="mr-1" (click)="openAddNewDialog()">ເພີ່ມລາຍການ</button>
         </div>
@@ -29,18 +29,24 @@
                 <th scope="col" class="text-center">ຈຳນວນຕໍ່າສຸດ</th>
                 <th scope="col" class="text-center">ຈຳນວນໂປຣ</th>
                 <th scope="col" class="text-center">ອາຫານທີ່ເຮັດໂປໂມຊັນ</th>
+                <th scope="col" class="text-center">ກຸ່ມທີ່ເຮັດໂປໂມຊັນ</th>
+                <th scope="col" class="text-center">ປະເພດ</th>
                 <th scope="col" class="text-center">ຮອດວັນທີ</th>
                 <th scope="col" class="text-center">ຍັງໃຊ້ໄດ້</th>
               </tr>
             </thead>
             <tbody>
               <tr *ngFor="let promotion of promotionsList;let i = index">
-                <td class="text-center align-middle">{{ i+1 }}</td>
-                <td class="text-left align-middle">{{ promotion.promotion.promotion_name }}</td>
-                <td class="text-left align-middle">{{ promotion.promotion.description }}</td>
+                <td class="text-center align-middle" style="cursor: pointer;"
+                  (click)="updatePromotion(promotion.promotion)">{{ i+1 }}</td>
+                <td class="text-left align-middle" style="cursor: pointer;"
+                  (click)="updatePromotion(promotion.promotion)">{{ promotion.promotion.promotion_name }}
+                </td>
+                <td class="text-left align-middle" style="cursor: pointer;"
+                  (click)="updatePromotion(promotion.promotion)">{{ promotion.promotion.description }}</td>
                 <td class="text-right align-middle">{{ promotion.promotion.promotion_min_quantity |number }}</td>
                 <td class="text-right align-middle">{{ promotion.promotion.promotion_quantity |number }}</td>
-                <td class="text-center align-middle">
+                <td class="text-center align-middle" (click)="addFood(promotion.promotion)">
                   <div class="table-responsive">
                     <ul class="list-group">
                       <li class="list-group-item text-left" *ngFor="let food of promotion.foods">{{ food.food_name }}
@@ -48,6 +54,8 @@
                     </ul>
                   </div>
                 </td>
+                <td class="text-center align-middle">{{ promotion.promotion.foodTypeName }}</td>
+                <td class="text-center align-middle">{{ promotion.promotion.promotion_type_name }}</td>
                 <td class="text-center align-middle">
                   {{ promotion.promotion.expiry_date |date: 'dd-MM-yyyy' }}
                 </td>
@@ -67,8 +75,5 @@
         </div>
       </div>
     </div>
-
-
-
   </mat-card-content>
 </mat-card>
